--- a/Casey-Lance-Project-2/Project 2/Project 2/MainWindow.xaml
+++ b/Casey-Lance-Project-2/Project 2/Project 2/MainWindow.xaml
@@ -1,16 +1,21 @@
 ﻿<Window x:Class="Project_2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Project 2" Height="250" Width="263.806">
     <Grid>
         <Menu Height="22" Name="menu1" Width="517" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderThickness="2" Grid.ColumnSpan="2">
             <Menu.BitmapEffect>
                 <BevelBitmapEffect/>
             </Menu.BitmapEffect>
             <MenuItem Header="_File" FontWeight="Bold">
-                <MenuItem x:Name="About" Header="_About" Click="About_Click"/>
-                <MenuItem x:Name="Close" Header="_Close" Click="Close_Click"/>
+                <MenuItem x:Name="about" Header="_About" Click="about_Click"/>
+                <MenuItem x:Name="close" Header="_Close" Click="close_Click"/>
             </MenuItem>
         </Menu>
+        <TextBox x:Name="wheelDiameterTxtBox" HorizontalAlignment="Left" Height="23" Margin="113,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Wheel Diameter:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="turnsPerMileTxtBox" HorizontalAlignment="Left" Height="23" Margin="113,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" BorderThickness="1"/>
+        <Label Content="Turns Per Mile:" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.713,-0.591"/>
+        <Button x:Name="calculateButton" Content="Calculate" HorizontalAlignment="Left" Margin="135,99,0,0" VerticalAlignment="Top" Width="75" Click="calculateButton_Click"/>
     </Grid>
 </Window>
