--- a/Casey-Lance-Project-2/Project 2/Project 2/MainWindow.xaml
+++ b/Casey-Lance-Project-2/Project 2/Project 2/MainWindow.xaml
@@ -1,21 +1,29 @@
 ﻿<Window x:Class="Project_2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Project 2" Height="250" Width="263.806">
+        Title="Rotations Per Mile Calculator" Height="238.06" Width="345.896" Background="#FF171717" ResizeMode="CanMinimize">
     <Grid>
-        <Menu Height="22" Name="menu1" Width="517" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderThickness="2" Grid.ColumnSpan="2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="13*"/>
+            <ColumnDefinition Width="306*"/>
+            <ColumnDefinition Width="21*"/>
+        </Grid.ColumnDefinitions>
+        <Menu Height="22" Name="menu1" Width="517" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderThickness="2" Grid.ColumnSpan="3" Margin="0,0,-177,0">
             <Menu.BitmapEffect>
                 <BevelBitmapEffect/>
             </Menu.BitmapEffect>
-            <MenuItem Header="_File" FontWeight="Bold">
-                <MenuItem x:Name="about" Header="_About" Click="about_Click"/>
-                <MenuItem x:Name="close" Header="_Close" Click="close_Click"/>
+            <MenuItem Header="_File" Foreground="#FF0082BF" FontWeight="Bold">
+                <MenuItem x:Name="about" Header="_About" Click="about_Click" Foreground="#FF020202"/>
+                <MenuItem x:Name="close" Header="_Close" Click="close_Click" Foreground="#FF020202"/>
             </MenuItem>
         </Menu>
-        <TextBox x:Name="wheelDiameterTxtBox" HorizontalAlignment="Left" Height="23" Margin="113,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Wheel Diameter:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="turnsPerMileTxtBox" HorizontalAlignment="Left" Height="23" Margin="113,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" BorderThickness="1"/>
-        <Label Content="Turns Per Mile:" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.713,-0.591"/>
-        <Button x:Name="calculateButton" Content="Calculate" HorizontalAlignment="Left" Margin="135,99,0,0" VerticalAlignment="Top" Width="75" Click="calculateButton_Click"/>
+        <TextBox x:Name="wheelDiameterTxtBox" HorizontalAlignment="Left" Height="23" Margin="114,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192" ToolTip="Enter Wheel Diameter In Inches" Grid.Column="1"/>
+        <Label Content="Wheel Diameter:" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" Foreground="#FF0082BF" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="turnsPerMileTxtBox" HorizontalAlignment="Left" Height="23" Margin="114,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" BorderThickness="0" Background="{x:Null}" FontSize="16" FontWeight="Bold" Foreground="#FF0082BF" Grid.Column="1"/>
+        <Label Content="Roations Per Mile:" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.713,-0.591" Foreground="#FF0082BF" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Button x:Name="calculateButton" Content="Calculate" HorizontalAlignment="Left" Margin="0,157,0,0" VerticalAlignment="Top" Width="75" Click="calculateButton_Click" ToolTip="Calculate Turns Per Mile" Grid.Column="1"/>
+        <Button x:Name="resetButton" Content="Reset" HorizontalAlignment="Left" Margin="114,157,0,0" VerticalAlignment="Top" Width="75" Click="resetButton_Click" ToolTip="Reset All Fields" Grid.Column="1"/>
+        <Button x:Name="exitButton" Content="Exit" HorizontalAlignment="Left" Margin="231,157,0,0" VerticalAlignment="Top" Width="75" Click="exitButton_Click" ToolTip="Exit" Grid.Column="1"/>
+        <Label Content="Turns Per Rotation Calculator" HorizontalAlignment="Center" Margin="26,22,10,0" VerticalAlignment="Top" RenderTransformOrigin="0.268,0.028" Width="270" FontFamily="Segoe UI Black" FontSize="18" FontWeight="Bold" Foreground="#FF0082BF" Grid.Column="1"/>
     </Grid>
 </Window>
