--- a/Casey-Lance-Project-2/Project 2/Project 2/MainWindow.xaml
+++ b/Casey-Lance-Project-2/Project 2/Project 2/MainWindow.xaml
@@ -19,11 +19,11 @@
         </Menu>
         <TextBox x:Name="wheelDiameterTxtBox" HorizontalAlignment="Left" Height="23" Margin="114,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192" ToolTip="Enter Wheel Diameter In Inches" Grid.Column="1"/>
         <Label Content="Wheel Diameter:" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" Foreground="#FF0082BF" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="turnsPerMileTxtBox" HorizontalAlignment="Left" Height="23" Margin="114,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" BorderThickness="0" Background="{x:Null}" FontSize="16" FontWeight="Bold" Foreground="#FF0082BF" Grid.Column="1"/>
+        <TextBox x:Name="turnsPerMileTxtBox" HorizontalAlignment="Left" Height="23" Margin="114,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" BorderThickness="0" Background="{x:Null}" FontSize="16" FontWeight="Bold" Foreground="#FF0082BF" Grid.Column="1" ToolTip="Number Of Wheel Rotations Per Mile"/>
         <Label Content="Roations Per Mile:" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.713,-0.591" Foreground="#FF0082BF" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <Button x:Name="calculateButton" Content="Calculate" HorizontalAlignment="Left" Margin="0,157,0,0" VerticalAlignment="Top" Width="75" Click="calculateButton_Click" ToolTip="Calculate Turns Per Mile" Grid.Column="1"/>
+        <Button x:Name="calculateButton" Content="Calculate" HorizontalAlignment="Left" Margin="0,157,0,0" VerticalAlignment="Top" Width="75" Click="calculateButton_Click" ToolTip="Calculate Rotations Per Mile" Grid.Column="1"/>
         <Button x:Name="resetButton" Content="Reset" HorizontalAlignment="Left" Margin="114,157,0,0" VerticalAlignment="Top" Width="75" Click="resetButton_Click" ToolTip="Reset All Fields" Grid.Column="1"/>
         <Button x:Name="exitButton" Content="Exit" HorizontalAlignment="Left" Margin="231,157,0,0" VerticalAlignment="Top" Width="75" Click="exitButton_Click" ToolTip="Exit" Grid.Column="1"/>
-        <Label Content="Turns Per Rotation Calculator" HorizontalAlignment="Center" Margin="26,22,10,0" VerticalAlignment="Top" RenderTransformOrigin="0.268,0.028" Width="270" FontFamily="Segoe UI Black" FontSize="18" FontWeight="Bold" Foreground="#FF0082BF" Grid.Column="1"/>
+        <Label Content="Rotations Per Mile Calculator" HorizontalAlignment="Center" Margin="26,22,10,0" VerticalAlignment="Top" RenderTransformOrigin="0.268,0.028" Width="270" FontFamily="Segoe UI Black" FontSize="18" FontWeight="Bold" Foreground="#FF0082BF" Grid.Column="1"/>
     </Grid>
 </Window>
