--- a/Casey-Lancce-Project-4/project4/project4/MainWindow.xaml
+++ b/Casey-Lancce-Project-4/project4/project4/MainWindow.xaml
@@ -1,24 +1,24 @@
 ﻿<Window x:Class="project4.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Line Calculator" Height="350" Width="525">
-    <Grid>
-        <TextBox x:Name="sideATxtBox" HorizontalAlignment="Left" Height="23" Margin="221,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Side a:" HorizontalAlignment="Left" Margin="163,60,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493"/>
-        <TextBox x:Name="sideBTxtBox" HorizontalAlignment="Left" Height="23" Margin="221,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Side b:" HorizontalAlignment="Left" Margin="163,104,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493"/>
-        <TextBox x:Name="angleCTxtBox" HorizontalAlignment="Left" Height="23" Margin="221,155,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Angle C:" HorizontalAlignment="Left" Margin="163,152,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493"/>
-        <TextBox x:Name="sideCTxtBox" HorizontalAlignment="Left" Height="23" Margin="221,207,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Side c:" HorizontalAlignment="Left" Margin="156,204,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493"/>
-        <Button x:Name="CalculateButton" Content="Calaculate" HorizontalAlignment="Left" Margin="125,255,0,0" VerticalAlignment="Top" Width="75" Click="CalculateButton_Click"/>
-        <Button x:Name="ResetButton" Content="Reset" HorizontalAlignment="Left" Margin="221,255,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="CloseButton" Content="Close" HorizontalAlignment="Left" Margin="318,255,0,0" VerticalAlignment="Top" Width="75"/>
+        Title="Line Calculator" Height="233.5" Width="583.25">
+    <Grid Background="#FF4D4A4A" Margin="0,0,-0.5,-2">
+        <TextBox x:Name="sideATxtBox" HorizontalAlignment="Left" Height="23" Margin="68,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ToolTip="Enter Length Of Side A"/>
+        <Label Content="Side a:" HorizontalAlignment="Left" Margin="20,39,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493" FontWeight="Bold"/>
+        <TextBox x:Name="sideBTxtBox" HorizontalAlignment="Left" Height="23" Margin="240,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ToolTip="Enter Length of Side B"/>
+        <Label Content="Side b:" HorizontalAlignment="Left" Margin="192,39,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493" FontWeight="Bold"/>
+        <TextBox x:Name="angleCTxtBox" HorizontalAlignment="Left" Height="23" Margin="424,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ToolTip="Enter Value Of Angle C In Degrees"/>
+        <Label Content="Angle C:" HorizontalAlignment="Left" Margin="366,42,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493" FontWeight="Bold"/>
+        <TextBox x:Name="sideCTxtBox" HorizontalAlignment="Left" Height="22" Margin="240,112,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ToolTip="Length of Side C"/>
+        <Label Content="Side c:" HorizontalAlignment="Left" Margin="190,112,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.373,-0.493" FontWeight="Bold"/>
+        <Button x:Name="CalculateButton" Content="Calculate" HorizontalAlignment="Left" Margin="204,78,0,0" VerticalAlignment="Top" Width="74" Click="CalculateButton_Click" ToolTip="Click To Calculate Length Of Side C"/>
+        <Button x:Name="ResetButton" Content="Reset" HorizontalAlignment="Left" Margin="324,78,0,0" VerticalAlignment="Top" Width="74" Click="ResetButton_Click" ToolTip="Click To Clear All Fields"/>
+        <Button x:Name="CloseButton" Content="Close" HorizontalAlignment="Left" Margin="264,146,0,0" VerticalAlignment="Top" Width="74" Click="CloseButton_Click" ToolTip="Click To Exit"/>
         <Menu Height="22" Name="menu1" Width="517" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderThickness="2" Grid.ColumnSpan="3" Margin="0,0,-187,0">
             <Menu.BitmapEffect>
                 <BevelBitmapEffect/>
             </Menu.BitmapEffect>
-            <MenuItem Header="_File" Foreground="#FF0082BF" FontWeight="Bold">
+            <MenuItem Header="_File" FontWeight="Bold">
                 <MenuItem x:Name="about" Header="_About" Click="about_Click" Foreground="#FF020202"/>
                 <MenuItem x:Name="close" Header="_Close" Click="close_Click" Foreground="#FF020202"/>
             </MenuItem>
