--- a/Casey-Lance-Project-6/project6/project6/MainWindow.xaml
+++ b/Casey-Lance-Project-6/project6/project6/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
+    <Grid x:Name="ItemsLabel">
         <Menu Height="22" Name="menu1" Width="517" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderThickness="2" Grid.ColumnSpan="3" Margin="0,0,-187,0">
             <Menu.BitmapEffect>
                 <BevelBitmapEffect/>
@@ -12,22 +12,27 @@
                 <MenuItem x:Name="close" Header="_Close" Click="close_Click" Foreground="#FF020202"/>
             </MenuItem>
         </Menu>
-        <ComboBox HorizontalAlignment="Left" Margin="135,57,0,0" VerticalAlignment="Top" Width="120">
-            <ListBoxItem x:Name="StandardShipping" Content="Standard"/>
-            <ListBoxItem x:Name="ExpressShipping" Content="Express"/>
-            <ListBoxItem x:Name="SameDayShipping" Content="Same Day"/>
+        <ComboBox x:Name="ShippingSpeed" HorizontalAlignment="Left" Margin="135,57,0,0" VerticalAlignment="Top" Width="120">
+            <ListBoxItem x:Name="Blank" Content=""/>
+            <ListBoxItem x:Name="StandardShipping" Content="Standard" Selected="StandardShipping_Selected"/>
+            <ListBoxItem x:Name="ExpressShipping" Content="Express" Selected="ExpressShipping_Selected"/>
+            <ListBoxItem x:Name="SameDayShipping" Content="Same Day" Selected="SameDayShipping_Selected"/>
         </ComboBox>
         <Label Content="Shipping Speed:" HorizontalAlignment="Left" Margin="20,57,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.007,0.394"/>
-        <ComboBox HorizontalAlignment="Left" Margin="135,100,0,0" VerticalAlignment="Top" Width="120">
-            <ListBoxItem x:Name="CategoryA" Content="Category A"/>
-            <ListBoxItem x:Name="CategoryB" Content="Category B"/>
+        <ComboBox x:Name="CategoryComboBox" HorizontalAlignment="Left" Margin="135,100,0,0" VerticalAlignment="Top" Width="120">
+            <ListBoxItem x:Name="Default" Content=""/>
+            <ListBoxItem x:Name="CategoryA" Content="By Item" Selected="CategoryA_Selected"/>
+            <ListBoxItem x:Name="CategoryB" Content="By Weight" Selected="CategoryB_Selected"/>
         </ComboBox>
         <Label Content="Category:" HorizontalAlignment="Left" Margin="55,100,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.007,0.394"/>
         <ListBox HorizontalAlignment="Left" Height="65" Margin="325,57,0,0" VerticalAlignment="Top" Width="110">
-            <RadioButton x:Name="SurchargeTrue" Content="Surcharge" IsThreeState="True"/>
-            <RadioButton x:Name="SurchargeFalse" Content="No Surcharge"/>
+            <RadioButton x:Name="SurchargeTrue" Content="Surcharge" IsThreeState="True" Checked="SurchargeTrue_Checked"/>
+            <RadioButton x:Name="SurchargeFalse" Content="No Surcharge" Checked="SurchargeFalse_Checked"/>
         </ListBox>
         <TextBox x:Name="ItemsTxtBox" HorizontalAlignment="Left" Height="20" Margin="135,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="ItemsLabel" Content="Number of Items:" HorizontalAlignment="Left" Margin="16,134,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="CalculateButton" Content="Calculate Shipping" HorizontalAlignment="Left" Margin="116,222,0,0" VerticalAlignment="Top" Width="75" Click="CalculateButton_Click"/>
+        <TextBox x:Name="UnitsTxtBox" HorizontalAlignment="Left" Height="23" Margin="10,140,0,0" TextWrapping="Wrap" Text="Number of Items:" VerticalAlignment="Top" Width="106"/>
+        <Label Content="Shipping Cost:" HorizontalAlignment="Left" Margin="255,222,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="ShippingCostTxtBox" HorizontalAlignment="Left" Height="23" Margin="346,225,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </Window>
