--- a/Casey-Lance-Project-8/project8/project8/MainWindow.xaml
+++ b/Casey-Lance-Project-8/project8/project8/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="project8.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Dice Game!" Height="350" Width="525">
     <Grid>
         <Menu Height="22" Name="menu1" Width="517" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderThickness="2" Grid.ColumnSpan="3" Margin="0,0,-187,0">
             <Menu.BitmapEffect>
@@ -12,5 +12,11 @@
                 <MenuItem x:Name="close" Header="_Close" Click="close_Click" Foreground="#FF020202"/>
             </MenuItem>
         </Menu>
+        <Button Content="Roll!" HorizontalAlignment="Left" Margin="178,91,0,0" VerticalAlignment="Top" Width="149" Height="64" Click="Button_Click" FontSize="24" FontWeight="Bold"/>
+        <Label x:Name="DiceOneLabel" Content="Dice One:" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="2.789,7.615" Margin="148,177,0,0" FontWeight="Bold"/>
+        <Label x:Name="DiceTwoLabel" Content="Dice Two:" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="2.789,7.615" Margin="297,177,0,0" FontWeight="Bold"/>
+        <TextBox x:Name="DiceOneResult" HorizontalAlignment="Left" Height="23" Margin="163,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="31" RenderTransformOrigin="0.129,0.087" Cursor="None" FontWeight="Bold" BorderThickness="0" HorizontalContentAlignment="Center" FontSize="14"/>
+        <TextBox x:Name="DiceTwoResult" HorizontalAlignment="Left" Height="23" Margin="312,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="31" RenderTransformOrigin="0.129,0.087" FontWeight="Bold" Cursor="None" BorderThickness="0" HorizontalContentAlignment="Center" FontSize="14"/>
+        <TextBox x:Name="InformationalTextBox" HorizontalAlignment="Left" Height="32" Margin="163,248,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" FontSize="14" BorderThickness="0" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
