--- a/Casey-Lance-Project-9/project9/project9/MainWindow.xaml
+++ b/Casey-Lance-Project-9/project9/project9/MainWindow.xaml
@@ -22,5 +22,6 @@
         <TextBox x:Name="AverageScoreTxtBox" HorizontalAlignment="Left" Height="27" Margin="185,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
         <Button Content="Close" HorizontalAlignment="Left" Margin="147,260,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Reset" HorizontalAlignment="Left" Margin="386,260,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="EnterButton" Content="Enter User" HorizontalAlignment="Left" Margin="260,260,0,0" VerticalAlignment="Top" Width="75" Click="EnterButton_Click"/>
     </Grid>
 </Window>
